--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueuse/motion": "^2.0.0-beta.12",
+    "aos": "^3.0.0-beta.6",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.2.37",
     "vue-unicons": "^3.3.1"
